<resources>
    <string name="app_name">PlayIt</string>

    <string-array name="titles_onboarding">
        <item>Welcome to PlayIt!</item>
        <item>The body</item>
        <item>The neck</item>
        <item>The head</item>
    </string-array>

    <string-array name="descriptions_onboarding">
        <item>Let\’s introduce you the key elements of a guitar. The Metal be with you!</item>
        <item>It\’s curvacious. It screams sexy. It\'s… a guitar.</item>
        <item>The neck basically is the section of the guitar that holds your fretboard, strings, and headstock.</item>
        <item>The guitar head is like a real head. Without it, your guitar is basically useless and unplayable.</item>
    </string-array>

    <string-array name="titles_first">
        <item>Page 1</item>
        <item>Page 2</item>
        <item>Page 3</item>
        <item>Page 4</item>
    </string-array>

    <string-array name="descriptions_first">
        <item>Description 1</item>
        <item>Description 2</item>
        <item>Description 3</item>
        <item>Description 4</item>
    </string-array>

    <string name="view_pager_button">LET\'S TRY OUT</string>
    <string name="bottom_nav_chords">Chords</string>
    <string name="bottom_nav_scales">Scales</string>
    <string name="bottom_nav_songs">Songs</string>
    <string name="bottom_nav_more">More</string>
    <string name="chords">Chords</string>
    <string name="scales">Scales</string>
    <string name="songs">Songs</string>
    <string name="settings">Settings</string>


    <string name="chordC">C</string>
    <string name="chordD">D</string>
    <string name="chordE">E</string>
    <string name="chordF">F</string>
    <string name="chordG">G</string>
    <string name="chordH">H</string>
    <string name="chordA">A</string>

    <string name="chords_screen_text_view">Chords</string>
    <string name="scales_screen_text_view">Scales</string>


    <string name="disconnected_title">Pair your device</string>
    <string name="disconnected_description">Make sure to turn on your Arduino.\nOnce it’s done, you can initialise the connection.</string>
    <string name="disconnected_button_pair">PAIR</string>

    <string name="connected_title">You are paired</string>
    <string name="connected_description">If you finished your learning session for today, you can disconnect your device.</string>
    <string name="connected_button_unpair">UNPAIR</string>

    <string name="error">Something went wrong. Please try again.</string>

    <string name="about_us">About us</string>

    <string name="about_title">Hi!\n  We are Reni &amp; Ari</string>
    <string name="about_description">We are high school students from Cluj-Napoca. We have been working on this project since junior year of high school and about a year ago Halcyon Mobile offered us their help.\nWe hope this app can help some of you and we are working hard to further improve it." </string>

    <string name="dark_mode">Dark Mode</string>
    <string name="see_onboarding">See onboarding</string>
    <string name="first_time_user_expreience">First Time User Experience</string>
    <string name="about_button">About</string>
    <string name="share">Share</string>
    <string name="version_name">version 2.2.0</string>
</resources>
