<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/circle_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatCheckedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chordC"
        android:textColor="@color/checked_text_view_colors"
        app:layout_constraintCircle="@id/circle"
        app:layout_constraintCircleAngle="0"
        app:layout_constraintCircleRadius="120dp" />

    <androidx.appcompat.widget.AppCompatCheckedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chordD"
        android:textColor="@color/checked_text_view_colors"
        app:layout_constraintCircle="@id/circle"
        app:layout_constraintCircleAngle="51"
        app:layout_constraintCircleRadius="120dp" />

    <androidx.appcompat.widget.AppCompatCheckedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chordE"
        android:textColor="@color/checked_text_view_colors"
        app:layout_constraintCircle="@id/circle"
        app:layout_constraintCircleAngle="102"
        app:layout_constraintCircleRadius="120dp" />

    <androidx.appcompat.widget.AppCompatCheckedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chordF"
        android:textColor="@color/checked_text_view_colors"
        app:layout_constraintCircle="@id/circle"
        app:layout_constraintCircleAngle="153"
        app:layout_constraintCircleRadius="120dp" />

    <androidx.appcompat.widget.AppCompatCheckedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chordG"
        android:textColor="@color/checked_text_view_colors"
        app:layout_constraintCircle="@id/circle"
        app:layout_constraintCircleAngle="205"
        app:layout_constraintCircleRadius="120dp" />

    <androidx.appcompat.widget.AppCompatCheckedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chordH"
        android:textColor="@color/checked_text_view_colors"
        app:layout_constraintCircle="@id/circle"
        app:layout_constraintCircleAngle="257"
        app:layout_constraintCircleRadius="120dp" />

    <androidx.appcompat.widget.AppCompatCheckedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chordA"
        android:textColor="@color/checked_text_view_colors"
        app:layout_constraintCircle="@id/circle"
        app:layout_constraintCircleAngle="307"
        app:layout_constraintCircleRadius="120dp" />


</androidx.constraintlayout.widget.ConstraintLayout>